--- a/projects/front/imp_wrapper/test/CMakeLists.txt
+++ b/projects/front/imp_wrapper/test/CMakeLists.txt
@@ -1,4 +1,5 @@
 create_test(imp_wrapper_test)
-require(imp_wrapper)
+require(imp_wrapper boost_filesystem)
 
 add_definitions(-DRESOURCE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/resources/\")
+add_definitions(-DOUTPUT_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/output/\")
