Added inline functions, external diff viewing for failed tests, and formatting improvements.

--- a/projects/front/imp_wrapper/test/CMakeLists.txt
+++ b/projects/front/imp_wrapper/test/CMakeLists.txt
@@ -3,3 +3,4 @@ require(imp_wrapper boost_filesystem)
 
 add_definitions(-DRESOURCE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/resources/\")
 add_definitions(-DOUTPUT_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/output/\")
+add_definitions(-DDIFF_VIEWER_PATH=\"${DIFF_VIEWER_PATH}\")
