--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ add_subdirectory(projects/parse/runic)
 add_subdirectory(projects/parse/runic_cpp)
 add_subdirectory(projects/parse/runic_imp)
 add_subdirectory(projects/model/graphing)
-add_subdirectory(projects/model/solving)
+#add_subdirectory(projects/model/solving)
 #add_subdirectory(projects/model/imp_graph)
 add_subdirectory(projects/model/imp_underworld)
 add_subdirectory(projects/model/imp_overworld)
