--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,10 @@ add_subdirectory(projects/parse/runic)
 add_subdirectory(projects/parse/runic_cpp)
 add_subdirectory(projects/parse/runic_imp)
 add_subdirectory(projects/model/graphing)
-#add_subdirectory(projects/model/solving)
 #add_subdirectory(projects/model/imp_graph)
 add_subdirectory(projects/model/imp_underworld)
 add_subdirectory(projects/model/imp_overworld)
+add_subdirectory(projects/model/solving)
 add_subdirectory(projects/parse/imp_summoning)
 add_subdirectory(projects/model/imp_mirror)
 add_subdirectory(projects/render/imp_artisan)
