Added namespace path resolution for professions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_subdirectory(projects/model/graphing)
 #add_subdirectory(projects/model/imp_graph)
 add_subdirectory(projects/model/imp_underworld)
 add_subdirectory(projects/model/imp_overworld)
-add_subdirectory(projects/model/standard_library)
+add_subdirectory(projects/model/cpp_stl)
 add_subdirectory(projects/model/solving)
 add_subdirectory(projects/model/overworld_exploring)
 add_subdirectory(projects/parse/imp_summoning)
