--- a/projects/model/imp_mirror/test/CMakeLists.txt
+++ b/projects/model/imp_mirror/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-create_test(imp_mirror_test)
-require(imp_summoning imp_mirror)
+create_executable(imp_mirror_test)
+require(imp_summoning imp_mirror googletest)
 
 add_definitions(-DRESOURCE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/resources/\")
