--- a/projects/parse/runic_imp/test/CMakeLists.txt
+++ b/projects/parse/runic_imp/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-create_test(runic_imp_test)
-require(runic_imp)
+create_executable(runic_imp_test)
+require(runic_imp googletest)
 
 add_definitions(-DRESOURCE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/resources/\")
