--- a/projects/parse/imp_summoning/test/CMakeLists.txt
+++ b/projects/parse/imp_summoning/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-create_test(summoning_test)
-require(imp_summoning)
+create_executable(summoning_test)
+require(imp_summoning googletest)
 
 add_definitions(-DRESOURCE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/resources/\")
