Working on header file inclusion.

--- a/projects/front/imp_taskmaster/CMakeLists.txt
+++ b/projects/front/imp_taskmaster/CMakeLists.txt
@@ -1,2 +1,2 @@
 create_library(imp_taskmaster)
-require(imp_rendering overworld_exploring)
+require(imp_rendering overworld_exploring boost_filesystem)
