Starting work on C++ header scanning.  Moved Source_Point from underworld to a new source_mapping header project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,11 @@ include("${CMAKE_TOOLS_PATH}/cmake-tools.cmake")
 add_subdirectory(${CMAKE_BOOST_DIR}/projects/system projects/system)
 add_subdirectory(${CMAKE_BOOST_DIR}/projects/filesystem projects/filesystem)
 
+add_subdirectory(projects/parse/source_mapping)
 add_subdirectory(projects/parse/runic)
 add_subdirectory(projects/parse/runic_cpp)
 add_subdirectory(projects/parse/runic_imp)
+add_subdirectory(projects/parse/cpp_scanning)
 add_subdirectory(projects/model/graphing)
 add_subdirectory(projects/model/imp_underworld)
 add_subdirectory(projects/model/imp_overworld)
