The main lexer refactoring is done but it has a bug where the lexer buffer sometimes gets corrupted tokens.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,8 @@ macro(add_if_exists dir)
   endif ()
 endmacro()
 
-add_if_exists(projects/front/imp_wrapper/test/output/game)
+if (MINGW)
+  add_if_exists(projects/front/imp_wrapper/test/output/game)
+endif ()
 
 finish_cmake()
