Lots of minor refactoring to how the parsing projects are related.  Starting to migrate cpp_stl from being hard-coded to loading imp files for the code definitions.

--- a/projects/parse/cpp_scanning/test/CMakeLists.txt
+++ b/projects/parse/cpp_scanning/test/CMakeLists.txt
@@ -1,4 +1,4 @@
 create_executable(cpp_scanning_test)
-require(cpp_scanning boost_filesystem googletest)
+require(cpp_scanning boost_filesystem googletest cpp_stl)
 
 add_definitions(-DIMP_ROOT=\"${imp_root}\")
