--- a/projects/parse/cpp_scanning/CMakeLists.txt
+++ b/projects/parse/cpp_scanning/CMakeLists.txt
@@ -1,2 +1,2 @@
 create_library(cpp_scanning)
-require(runic runic_cpp source_mapping imp_underworld)
+require(runic runic_cpp source_mapping imp_underworld imp_summoning)
