Further work on solving automatic generics.

--- a/projects/model/solving/CMakeLists.txt
+++ b/projects/model/solving/CMakeLists.txt
@@ -2,5 +2,5 @@ create_library(solving)
 require(imp_overworld)
 
 if (DEBUG_SOLVER)
-  add_definitions(-DDEBUG_SOLVER)
+  add_definitions(-DDEBUG_SOLVER=${DEBUG_SOLVER})
 endif ()
