--- a/projects/front/imp_taskmaster/CMakeLists.txt
+++ b/projects/front/imp_taskmaster/CMakeLists.txt
@@ -1,2 +1,7 @@
 create_library(imp_taskmaster)
-require(imp_rendering overworld_exploring boost_filesystem)
+require(
+  imp_rendering
+  overworld_exploring
+  boost_filesystem
+  yaml
+)
