Working on project scale building.  Adding proper support for namespaces and referencing external project namespaces.

--- a/projects/front/imp_wrapper/test/resources/projects/projects/game/arch.yaml
+++ b/projects/front/imp_wrapper/test/resources/projects/projects/game/arch.yaml
@@ -4,4 +4,4 @@ dependencies:
 build:
   imp:
     source: imp
-    output: ../../../../output/projects/output
+    output: ../../../../output/projects/source
