Updating the ownership/storage code to handle the new structure.

--- a/projects/front/imp_wrapper/test/CMakeLists.txt
+++ b/projects/front/imp_wrapper/test/CMakeLists.txt
@@ -4,3 +4,7 @@ require(imp_wrapper boost_filesystem googletest)
 add_definitions(-DRESOURCE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/resources/\")
 add_definitions(-DOUTPUT_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/output/\")
 add_definitions(-DDIFF_VIEWER_PATH=\"${DIFF_VIEWER_PATH}\")
+
+if (DEFINED DISABLE_DIFF)
+  add_definitions(-DDISABLE_DIFF)
+endif ()
